# haskell-ubjson

./: README.md  hs-ubjson.cabal  ubjson.cabal
app/: Main.hs
src/: Animals.hs
src/Data/: UBJSON.hs  Ubjson.hs
test/: Spec.hs
