name:                ubjson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/angiolep/haskell-ubjson#readme
license:             BSD3
license-file:        LICENSE
author:              Paolo Angioletti
maintainer:          paolo.angioletti@gmail.com
copyright:           2017 BitSpoke Ltd
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Ubjson
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
  default-language:    Haskell2010

executable ubjson-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ubjson
  default-language:    Haskell2010

test-suite ubjson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , ubjson
                     , bytestring
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/angiolep/ubjson
