name:                ubjson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/angiolep/haskell-ubjson
license:             BSD3
license-file:        LICENSE
author:              Paolo Angioletti <paolo.angioletti@gmail.com>
maintainer:          Paolo Angioletti <paolo.angioletti@gmail.com>
copyright:           (c) 2017, Paolo Angioletti
                     (c) 2017, BitSpoke Ltd
category:            Data
                   , Serialization
                   , Network
build-type:          Simple
stability:           experiental
-- TODO tested-with:
extra-source-files:  README.md
synopsis:            UBJSON codec
cabal-version:       >=1.10
description:
    This package provides functions to __encode__ (__decode__) some of the most common
    Haskell data types to (from)  UBJSON - Universal Binary JSON strings.
    .
    Please refer to the official UBJSON specification published at http://ubjson.org/
    for further details about the binary format.

library
  hs-source-dirs:      src
  exposed-modules:     Data.Ubjson
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , text
  default-language:    Haskell2010

executable ubjson-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ubjson
  default-language:    Haskell2010

test-suite ubjson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , containers
                     , QuickCheck
                     , hspec
                     , text
                     , ubjson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/angiolep/ubjson
